--- a/index.html
+++ b/index.html
@@ -5,87 +5,130 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Random Vimeo — Victor</title>
   <style>
-    html,body{margin:0;background:#0b0b0b;color:#f1f1f1;font-family:system-ui,Arial,sans-serif}
-    .wrap{max-width:960px;margin:40px auto;padding:16px}
-    .bar{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-    button{border:0;padding:10px 14px;border-radius:10px;cursor:pointer;background:#6a5acd;color:white}
-    button:active{transform:scale(0.98)}
-    .grid{display:grid;grid-template-columns:1fr 320px;gap:16px}
-    @media (max-width:900px){.grid{grid-template-columns:1fr}}
-    .thumbs{display:grid;grid-template-columns:repeat(auto-fill,minmax(140px,1fr));gap:8px;max-height:60vh;overflow:auto}
-    .thumb{background:#151515;border-radius:10px;padding:8px}
-    .thumb img{width:100%;border-radius:8px;display:block}
-    .thumb small{opacity:.8}
-    iframe{width:100%;aspect-ratio:16/9;border:0;border-radius:14px;background:#000}
+    :root { --bg:#0b0b0b; --fg:#f1f1f1; --accent:#6a5acd; }
+    * { box-sizing:border-box }
+    html,body{margin:0;background:var(--bg);color:var(--fg);font-family:system-ui,Arial,sans-serif}
+    .wrap{max-width:1200px;margin:28px auto;padding:16px}
+    .topbar{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+    .title{margin:0;font-weight:700;letter-spacing:.3px}
+    button{border:0;padding:10px 14px;border-radius:12px;cursor:pointer;background:var(--accent);color:white}
+    button:active{transform:scale(.98)}
+    .comment{opacity:.9;margin-top:6px;font-style:italic}
+    .hero{margin-top:14px}
+    .hero iframe{width:100%;aspect-ratio:16/9;border:0;border-radius:16px;background:#000}
+    .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-top:14px}
+    .card{background:#111;border:1px solid #1d1d1d;border-radius:12px;padding:8px}
+    .card iframe{width:100%;aspect-ratio:16/9;border:0;border-radius:8px;background:#000}
+    .meta{margin-top:6px;font-size:.9rem;opacity:.85}
+    @media (max-width:1150px){ .grid{grid-template-columns:repeat(3,1fr)} }
+    @media (max-width:900px){ .grid{grid-template-columns:repeat(2,1fr)} }
+    @media (max-width:580px){ .grid{grid-template-columns:1fr} }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="bar">
-      <h1 style="margin:0;">🎲 Random Vimeo</h1>
-      <button id="btn-random">Otro random</button>
-      <button id="btn-shuffle">Shuffle lista</button>
+    <div class="topbar">
+      <h1 class="title">🎲 Random Vimeo</h1>
+      <button id="btn-refresh">Otro random (5)</button>
+      <button id="btn-shuffle">Shuffle</button>
     </div>
+    <div id="chiruli" class="comment">Chirulí dice: cargando cositas sabrosonas…</div>
 
-    <div class="grid" style="margin-top:16px;">
-      <div>
-        <div id="player-slot">
-          <div style="padding:24px;border:1px dashed #333;border-radius:14px;">
-            Cargando videos...
-          </div>
-        </div>
-        <h3 id="video-title" style="margin:12px 0 0 0;opacity:.9"></h3>
-      </div>
-
-      <div>
-        <h3 style="margin-top:0;">Lista</h3>
-        <div id="thumbs" class="thumbs"></div>
-      </div>
+    <!-- Héroe grande -->
+    <div id="hero" class="hero">
+      <div style="padding:28px;border:1px dashed #333;border-radius:16px;">Cargando videos…</div>
     </div>
+    <div id="hero-title" class="meta"></div>
+
+    <!-- Cuatro más abajo -->
+    <div id="grid" class="grid"></div>
   </div>
 
   <script>
-    // Si usas álbum específico, puedes pasar ?album=ALBUM_ID en la URL del sitio,
-    // o setear VIMEO_ALBUM_ID en el backend.
-    const params = new URLSearchParams(location.search);
-    const album = params.get("album");
-    const API = album ? `/api/vimeo-videos?album=${album}` : `/api/vimeo-videos`;
+    // Endpoint seguro (serverless) que ya montaste
+    const API = '/api/vimeo-videos';
+
+    // Frases estilo Chirulí
+    const QUOTES = [
+      "Chirulí dice: si suena, rueda; si vibra, queda.",
+      "Chirulí dice: arte to’ los días, con tumbao y sin permiso.",
+      "Chirulí dice: random es destino disfrazado.",
+      "Chirulí dice: dale play sin miedo, que lo demás es cuento.",
+      "Chirulí dice: si te guiña el ojo, es pa’ verlo dos veces."
+    ];
+
+    const heroEl = document.getElementById('hero');
+    const heroTitle = document.getElementById('hero-title');
+    const gridEl = document.getElementById('grid');
+    const chiruliEl = document.getElementById('chiruli');
 
     let VIDEOS = [];
 
-    const slot = document.getElementById("player-slot");
-    const titleEl = document.getElementById("video-title");
-    const thumbsEl = document.getElementById("thumbs");
-
-    function embed(id, name) {
-      slot.innerHTML = `<iframe
-        src="https://player.vimeo.com/video/${id}?autoplay=1&muted=1&title=0&byline=0&portrait=0"
-        allow="autoplay; fullscreen; picture-in-picture"
-        allowfullscreen
-        loading="eager"
-      ></iframe>`;
-      titleEl.textContent = name || "";
+    function chiruliComment(extra) {
+      const base = QUOTES[Math.floor(Math.random()*QUOTES.length)];
+      chiruliEl.textContent = extra ? `${base} — ${extra}` : base;
     }
 
-    function pickRandom() {
-      if (!VIDEOS.length) return;
-      const i = Math.floor(Math.random() * VIDEOS.length);
-      const v = VIDEOS[i];
-      embed(v.id, v.name);
-    }
-
-    function renderThumbs() {
-      thumbsEl.innerHTML = "";
-      VIDEOS.forEach((v) => {
-        const el = document.createElement("div");
-        el.className = "thumb";
-        el.innerHTML = `
-          <img src="${v.thumbnail || ""}" alt="${v.name}">
-          <small>${v.name || "Sin título"}</small>
-        `;
-        el.onclick = () => embed(v.id, v.name);
-        thumbsEl.appendChild(el);
+    function vimeoSrc(id, opts = {}) {
+      // Autoplay silenciado y sin autopause para permitir varios a la vez
+      const p = new URLSearchParams({
+        autoplay: opts.autoplay ? 1 : 0,
+        muted: opts.muted ? 1 : 0,
+        title: 0, byline: 0, portrait: 0,
+        autopause: 0, playsinline: 1, dnt: 1
       });
+      return `https://player.vimeo.com/video/${id}?${p.toString()}`;
+    }
+
+    function uniqueSample(arr, n) {
+      const copy = arr.slice();
+      for (let i = copy.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [copy[i], copy[j]] = [copy[j], copy[i]];
+      }
+      return copy.slice(0, Math.min(n, copy.length));
+    }
+
+    function renderFive() {
+      if (VIDEOS.length === 0) return;
+      const picks = uniqueSample(VIDEOS, 5);
+      const [main, ...rest] = picks;
+
+      // Héroe grande
+      heroEl.innerHTML = `
+        <iframe
+          src="${vimeoSrc(main.id, { autoplay: 1, muted: 1 })}"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen
+          loading="eager"
+        ></iframe>
+      `;
+      heroTitle.textContent = main.name || '';
+
+      // Cuatro abajo
+      gridEl.innerHTML = '';
+      rest.forEach(v => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerHTML = `
+          <iframe
+            src="${vimeoSrc(v.id, { autoplay: 0, muted: 0 })}"
+            allow="autoplay; fullscreen; picture-in-picture"
+            allowfullscreen
+            loading="lazy"
+          ></iframe>
+          <div class="meta">${v.name || 'Sin título'}</div>
+        `;
+        // Click en la tarjeta: subirlo al héroe
+        card.addEventListener('click', () => {
+          heroEl.querySelector('iframe').src = vimeoSrc(v.id, { autoplay: 1, muted: 1 });
+          heroTitle.textContent = v.name || '';
+          chiruliComment('cambiaste la corona.');
+        });
+        gridEl.appendChild(card);
+      });
+
+      chiruliComment('cinco al hilo.');
     }
 
     function shuffle(arr) {
@@ -98,29 +141,28 @@
 
     async function load() {
       try {
-        const r = await fetch(API, { cache: "no-store" });
+        const r = await fetch(API, { cache: 'no-store' });
         const data = await r.json();
         VIDEOS = (data.items || []).filter(v => v?.id);
         if (!VIDEOS.length) {
-          slot.innerHTML = `<div style="padding:24px;border:1px dashed #333;border-radius:14px;">
-            No llegaron videos. Revisa permisos/álbum en Vimeo.
+          heroEl.innerHTML = `<div style="padding:28px;border:1px dashed #333;border-radius:16px;">
+            No llegaron videos. Revisa tu álbum/usuario y permisos de embed en Vimeo.
           </div>`;
           return;
         }
-        renderThumbs();
-        pickRandom();
+        renderFive();
       } catch (e) {
-        slot.innerHTML = `<div style="padding:24px;border:1px dashed #333;border-radius:14px;">
+        heroEl.innerHTML = `<div style="padding:28px;border:1px dashed #333;border-radius:16px;">
           Error cargando: ${e?.message || e}
         </div>`;
       }
     }
 
-    document.getElementById("btn-random").onclick = pickRandom;
-    document.getElementById("btn-shuffle").onclick = () => {
+    document.getElementById('btn-refresh').onclick = renderFive;
+    document.getElementById('btn-shuffle').onclick = () => {
       shuffle(VIDEOS);
-      renderThumbs();
-      pickRandom();
+      renderFive();
+      chiruliComment('barajita nueva.');
     };
 
     load();
